test/bad/functions/type07.px

func f(Int y: 0) def
    return

g = f
g(y=1)
